src/objects/System_Log__c.object
<CustomObject>
    <fields>
        <fullName>Analytics_Type__c</fullName>
        <label>Analytics Type</label>
        <picklist>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click-through</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Name__c</fullName>
        <label>Article Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Through_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Click Through Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Click_Type__c</fullName>
        <label>Live Agent Click Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outside HOOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Agents Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Results__c</fullName>
        <label>Number of Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Process__c</fullName>
        <label>Page/Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Click_Through_Count__c</fullName>
        <formula>Parent_Log__r.Click_Through_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Click Through Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Log</label>
        <referenceTo>System_Log__c</referenceTo>
        <relationshipLabel>Click-Through Logs</relationshipLabel>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Search_String__c</fullName>
        <formula>IF(
NOT(ISBLANK(Parent_Log__c)),
Parent_Log__r.Search_String__c, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Search String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <description>Search query from FAQ Sites page.</description>
        <inlineHelpText>Search query from FAQ Sites page.</inlineHelpText>
        <label>Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Live_Agent_Click_Type__c</columns>
        <columns>Analytics_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log - {000000}</displayFormat>
        <label>System Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <recordTypes>
        <fullName>Click_Through</fullName>
        <active>true</active>
        <label>Click Through</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error</fullName>
        <active>true</active>
        <label>Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Agent_Click_through</fullName>
        <active>true</active>
        <label>Live Agent Click-through</label>
    </recordTypes>
    <recordTypes>
        <fullName>Search_Result</fullName>
        <active>true</active>
        <label>Search Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>